clusters/wlc-1/tkg-extensions-mods/authentication/gangway/aws/generated/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gangwaysvc
  namespace: tanzu-system-auth
  labels:
    app: gangway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
spec:
  type: ClusterIP
  ports:
  - name: "http"
    protocol: TCP
    port: 80
    targetPort: "http"
  - name: "https"
    protocol: TCP
    port: 443
    targetPort: "http"
  selector:
    app: gangway
