clusters/wlc-1/tkg-extensions-mods/authentication/gangway/aws/generated/02b-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gangway
  namespace: tanzu-system-auth
spec:
  virtualhost:
    fqdn: gangway.wlc-1.tkg-aws-lab.winterfell.live
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: gangwaysvc
      port: 443
  routes:
  - match: /
    services:
    - name: kuard
      port: 80
